--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         </small></p>
     </footer>
     <script src="./js/lib.js"></script>
-    <!-- <script src="./index.js"></script> -->
-    <script src="./indexClass.js"></script>
+    <script src="./index.js"></script> 
 </body>
 </html>
